# slowmokit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  _config.yml  clang-format-all  create  index.md  install
.github/workflows/: cli.yml  cmake.yml  cpp_linter.yml  linter.yml  tidy_check.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/create/: mod.rs  write_docs.rs  write_example.rs  write_source.rs
cli/src/install/: mod.rs
create_model/: .gitignore  Cargo.toml  README.md
create_model/src/: main.rs  write_docs.rs  write_example.rs  write_source.rs
docs/linear_model/: linear_regression.md  logistic_regression.md
docs/methods/: activation_functions.md
docs/methods/bernoulli_nb/: bernoulli_nb.md
docs/methods/cluster/: DBSCAN.md
docs/methods/linear_model/: lasso_regularization.md  linear_regression.md  logistic_regression.md  ridge_regularization.md
docs/methods/metrics/: AUC-ROC.md  classification_report.md  distance_metric.md  f1Score.md  mean_squared_error.md  precision.md  recall.md  silhouette_score.md  silhoutte_score.md
docs/methods/preprocessing/: csv_reader.md  label_encoder.md  one_hot_encoder.md  standardization.md
docs/metrics/: accuracy.md  mean_squared_error.md  silhouette_score.md
docs/neighbors/knn/: knn.md
docs/preprocessing/: normalization.md
examples/: Sam_regression.cpp  Silhouette_Score.cpp  accuracy_eg.cpp  activation_functions_eg.cpp  kMeans.cpp  lol.csv  matrix.cpp  one_hot_encoder.cpp  read_csv.cpp
examples/cluster/: DBSCAN.cpp  kMeans.cpp  silhoutte_score.cpp
examples/linear_model/: lasso_regression.cpp  linear_regression.cpp  logistic_regression.cpp  ridge_regression.cpp
examples/linear_models/: linearRegression.cpp  linear_regression.cpp
examples/methods/cluster/: kMeans.cpp
examples/methods/linear_model/: linear_regression.cpp  logistic_regression.cpp
examples/methods/metrics/: accuracy_eg.cpp  classification_report_eg.cpp  mean_squared_error_eg.cpp  precision_eg.cpp  recall_eg.cpp
examples/methods/neighbors/: bernoulli_nb.cpp  gaussian_nb.cpp  knn.cpp  multinomial_nb.cpp
examples/methods/preprocessing/: csv_reader.cpp  (+4 more)
examples/metrics/: accuracy_eg.cpp  classification_report_eg.cpp  distance_metric_eg.cpp  f1score_eg.cpp  mean_squared_error_eg.cpp  precision_eg.cpp  recall.hpp  recall_eg.cpp  silhouette_score.cpp  silhoutte_score.cpp
examples/neighbors/: bernoulli_nb.cpp  categorical_nb.cpp  decision_tree.cpp  distance_metric_eg.cpp  gaussian_nb.cpp  knn.cpp  multinomial_nb.cpp
examples/preprocessing/: label_encoder.cpp  normalization_eg.cpp  one_hot_encoder_eg.cpp  standardization_eg.cpp
include/: .clang-format
include/slowmokit/: CMakeLists.txt  base.hpp  core.hpp
include/slowmokit/core/util/: check_size.hpp
include/slowmokit/linear_model/: linear_regression.hpp
include/slowmokit/linear_model/linear_regression/: linear_regression.hpp  linear_regression_impl.hpp
scripts/: install
slowmokit/: README.md  base.hpp  prereqs.hpp
slowmokit/ducks/: ducks.hpp
slowmokit/linear_models/: linearRegression.h
slowmokit/models/: model.cpp  model.h  model.hpp  models.h
src/: .clang-format  slowmokit.cpp  slowmokit.hpp
src/slowmokit/: CMakeLists.txt  base.hpp  core.hpp  prereqs.hpp
src/slowmokit/ducks/: ducks.hpp
src/slowmokit/ducks/io/: io.cpp  io.hpp
src/slowmokit/ducks/matrix/: matrix.cpp  matrix.hpp  matrix_free.cpp  matrix_main.cpp
src/slowmokit/ducks/random/: random.cpp  random.hpp
src/slowmokit/methods/: activation_functions.cpp  activation_functions.hpp
src/slowmokit/methods/cluster/: DBSCAN.hpp  kMeans.cpp  kMeans.hpp  silhoutte_score.hpp
src/slowmokit/methods/cluster/DBSCAN/: DBSCAN.cpp  DBSCAN.hpp
src/slowmokit/methods/cluster/kMeans/: _kMeans.cpp  kMeans.cpp  kMeans.hpp
src/slowmokit/methods/cluster/silhoutte_score/: silhoutte_score.cpp  silhoutte_score.hpp
src/slowmokit/methods/linear_model/: lasso_regularization.cpp  lasso_regularization.hpp  linear_regression.hpp  logistic_regression.hpp  ridge_regularization.cpp  ridge_regularization.hpp
src/slowmokit/methods/linear_model/linear_regression/: linear_regression.cpp  linear_regression.hpp
src/slowmokit/methods/linear_model/logistic_regression/: logistic_regression.cpp  logistic_regression.hpp
src/slowmokit/methods/metrics/: accuracy  accuracy.cpp  accuracy.hpp  classification_report.cpp  classification_report.hpp  f1score.cpp  f1score.hpp  mean_squared_error.cpp  mean_squared_error.hpp  metrics.cpp  metrics.hpp  precision.cpp  precision.hpp  recall.cpp  recall.hpp  silhouette_score.cpp  silhouette_score.hpp  silhoutte_score.cpp  silhoutte_score.hpp
src/slowmokit/methods/metrics/distance_metric/: distance_metric.cpp  distance_metric.hpp
src/slowmokit/methods/neighbors/: bernoulli_nb.hpp  decision_tree.hpp  gaussian_nb.hpp  knn.hpp  multinomial_nb.hpp
src/slowmokit/methods/neighbors/bernoulli_nb/: bernoulli_nb.cpp  bernoulli_nb.hpp
src/slowmokit/methods/neighbors/categorical_nb/: categorical_nb.cpp  categorical_nb.hpp
src/slowmokit/methods/neighbors/decision_tree/: decision_tree.cpp  decision_tree.hpp
src/slowmokit/methods/neighbors/distance_metric/: distance_metric.cpp  distance_metric.hpp
src/slowmokit/methods/neighbors/gaussian_nb/: gaussian_nb.cpp  gaussian_nb.hpp
src/slowmokit/methods/neighbors/knn/: knn.cpp  knn.hpp
src/slowmokit/methods/neighbors/multinomial_nb/: multinomial_nb.cpp  multinomial_nb.hpp
src/slowmokit/methods/preprocessing/: csv_reader.cpp  csv_reader.hpp  label_encoder.cpp  label_encoder.hpp  normalization  normalization.cpp  normalization.hpp  one_hot_encoder.cpp  one_hot_encoder.hpp  standardization  standardization.cpp  standardization.hpp
src/slowmokit/model_selection/train_test_split/: train_test_split.cpp  train_test_split.hpp
src/slowmokit/models/: Kmeans.hpp  bernoulliNB.hpp  gaussianNB.hpp  knn.hpp  logistic_regression.hpp  model.hpp
src/slowmokit/models/linear_models/: linear_models.hpp
src/slowmokit/models/linear_models/linear_regression/: linear_regression.cpp  linear_regression.hpp
(+8 files in other folders)
